# find_distance

./: .gitignore  .mypy.ini  Dockerfile  README.MD  README.md  app.py  config.py  coords_of_mkad_s_kms.csv  dataframe.dbf  dataframe.shp  main.py  pyproject.toml  setup.cfg
calculated_distance/: blueprint.py  coords_of_mkad_s_kms.xlsx  dataframe.dbf  dataframe.shx  forms.py  logic.py
calculated_distance/templates/calculated_distance/: index.html
calculated_distance/tests/: coords_of_mkad_s_kms.xlsx  test_logic.py  test_views.py
makd_distance/: blueprint.py  logic.py
makd_distance/tests/: test_logic.py
mkad_distance/: blueprint.py  forms.py  logic.py
mkad_distance/templates/mkad_distance/: index.html
mkad_distance/tests/: test_logic.py
templates/: base.html  index.html
