[tool.poetry]
name = "find_distance_(flask)"
version = "0.1.0"
description = ""
authors = ["Sergey_Sharay"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
WTForms = "^2.3.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
