[tool.poetry]
name = "find_distance_(flask)"
version = "0.1.0"
description = ""
authors = ["Sergey_Sharay"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
Flask = "^2.0.2"
WTForms = "^2.3.3"
loguru = "^0.5.3"
geopy = "^2.2.0"
Fiona = "^1.8.20"
pytest = "^6.2.5"
matplotlib = "^3.5.0"
flake8 = "^4.0.1"
pandas = "^1.3.5"
osmnx = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
